--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -12,6 +12,16 @@
     padding: 0;
   }
   
+  .MealsLoading{
+    text-align: center;
+    color: white;
+  }
+
+  .ErrorState{
+    text-align: center;
+    color: rgb(255, 130, 130);
+  }
+
   @keyframes meals-appear {
     from {
       opacity: 0;
